<resources>
    <!-- App -->
    <string name="app_name">OpenEvents</string>

    <!-- Component descriptions -->
    <string name="openEventsLogoDescription">Open Events Logo</string>
    <string name="eventImageDescription">Image of an event</string>
    <string name="addEventButtonDescription">Add Event Button</string>
    <string name="userImageDescription">Image of a user</string>
    <string name="acceptRequestButtonDescription">Accept request button</string>
    <string name="declineRequestButtonDescription">Decline request button</string>
    <string name="backArrowDescription">Back arrow button</string>
    <string name="calendarDescription">Add event to calendar button</string>
    <string name="moreActionsDescription">More actions button</string>
    <string name="sendRequestButtonDescription">Send request button</string>
    <string name="deleteFriendButtonDescription">Delete friend button</string>
    <string name="sortByStartDateIconDescription">ASC/DESC arrow icon</string>

    <!-- Titles -->
    <string name="emailTitle">Email</string>
    <string name="eventEditTitle">Title</string>
    <string name="passwordTitle">Password</string>
    <string name="repeatPasswordTitle">Repeat password</string>
    <string name="signUpTitle">Sign up</string>
    <string name="editUserInfoTitle">Edit account</string>
    <string name="editEventInfoTitle">Edit event</string>
    <string name="locationTitle">Location</string>
    <string name="firstNameTitle">First name</string>
    <string name="lastNameTitle">Last name</string>
    <string name="userTitle">User</string>
    <string name="myProfileTitle">My profile</string>
    <string name="eventsTitle">Events</string>
    <string name="myEventsTitle">My events</string>
    <string name="homeTitle">Home</string>
    <string name="popularTitle">Popular</string>
    <string name="allEventsTitle">All Events</string>
    <string name="myStatisticsTitle">My Statistics</string>
    <string name="statisticsTitle">Statistics</string>
    <string name="informationTitle">Information</string>
    <string name="myAverageScoreTitle">My average score</string>
    <string name="averageScoreTitle">Average score</string>
    <string name="numberOfCommentTitle">Number of comments</string>
    <string name="percentageOfUsersTitle">Percentage of users with less comments</string>
    <string name="createEventTitle">Create event</string>
    <string name="eventTitle">Title</string>
    <string name="eventLocationTitle">Location</string>
    <string name="eventStartDateTitle">Start date</string>
    <string name="eventEndDateTitle">Closure date</string>
    <string name="eventNumberOfParticipantsTitle">Number of participants</string>
    <string name="eventTypeTitle">Category</string>
    <string name="eventDescriptionTitle">Description</string>
    <string name="eventDateTitle">Start date - Closure date</string>
    <string name="myFriendsTitle">Social</string>
    <string name="popupEditInfo">Edit information</string>
    <string name="popupLogout">Log out</string>
    <string name="popupDeleteAccount">Delete account</string>
    <string name="joinedEventTitle">Joined</string>
    <string name="finishedEventTitle">Finished</string>

    <!-- Texts -->
    <string name="notAccountText">Don\'t have an account?</string>
    <string name="loading">Loading…</string>
    <string name="serverConnectionFailed">An error occurred while connecting to the server</string>
    <string name="noPopularEvents">No popular events were found</string>
    <string name="noEvents">No events were found</string>
    <string name="noUsers">No users were found</string>
    <string name="noFriends">No friends were found</string>
    <string name="noJoinedEvents">You have not joined any event yet</string>
    <string name="noFriendRequests">No friend requests were found</string>
    <string name="noCreatedEvents">No created events found</string>
    <string name="noFinishedEvents">No finished events found</string>
    <string name="noAverageScore">No average score yet</string>
    <string name="noPercentageCommentersBelow">Percentage cannot be calculated yet</string>

    <!-- Labels -->
    <string name="signInLabel">Sign in</string>
    <string name="createAccountLabel">Create account</string>
    <string name="updateInfoLabel">Update information</string>
    <string name="seeAllLabel">See all</string>
    <string name="sortByStartDate">Sort by start date</string>
    <string name="editLabel">Edit</string>
    <string name="acceptLabel">Accept</string>
    <string name="cancelLabel">Cancel</string>
    <string name="createEventLabel">Create event</string>
    <string name="updateEventLabel">Update event</string>
    <string name="joinEventLabel">Join event</string>
    <string name="addCalendarEventLabel">Add to calendar</string>
    <string name="logOutLabel">Log out</string>
    <string name="deleteAccountLabel">Delete account</string>
    <string name="deleteEventLabel">Delete event</string>
    <string name="commentEventLabel">Comment</string>
    <string name="rateEventLabel">Rate</string>
    <string name="editEventLabel">Edit</string>
    <string name="leaveEventLabel">Leave</string>
    <string name="sendFriendRequestLabel">Send friend request</string>
    <string name="deleteFriendshipLabel">Delete friendship</string>
    <string name="allUsersLabel">All users</string>
    <string name="friendsLabel">Friends</string>
    <string name="friendRequestsLabel">Requests</string>

    <!-- Hints -->
    <string name="emailHint">Your email</string>
    <string name="changeEmailHint">Change email</string>
    <string name="changeTitleHint">Change title</string>
    <string name="passwordHint">Your password</string>
    <string name="changePasswordHint">Change your password</string>
    <string name="repeatChangedPasswordHint">Repeat changed password</string>
    <string name="repeatPasswordHint">Repeat your password</string>
    <string name="firstNameHint">Your first name</string>
    <string name="changeFirstNameHint">Change your first name</string>
    <string name="changeLocationHint">Change location</string>
    <string name="lastNameHint">Your last name</string>
    <string name="changeLastNameHint">Change your last name</string>
    <string name="searchHint">Search</string>
    <string name="searchEventsHint">Search events</string>
    <string name="searchUsersHint">Search users</string>
    <string name="eventTitleHint">Event title</string>
    <string name="eventLocationHint">Event location</string>
    <string name="eventStartDateHint">Select a start date</string>
    <string name="changeEventStartDateHint">Change start date</string>
    <string name="eventEndDateHint">Select an end date</string>
    <string name="changeEventEndDateHint">Change closure date</string>
    <string name="numberOfParticipantsHint">Select a number of participants</string>
    <string name="changeNumberOfParticipantsHint">Change number of participants</string>
    <string name="eventTypeHint">Select an event category</string>
    <string name="changeEventTypeHint">Change event category</string>
    <string name="eventDescriptionHint">Event description</string>
    <string name="changeEventDescriptionHint">Change event description</string>

    <!-- Errors -->
    <string name="cannotConnectToServerError">ERROR: Connection to the server failed</string>
    <string name="formNotFilledError">ERROR: You must fill all the fields</string>
    <string name="requiredFieldError">ERROR: Required field</string>
    <string name="invalidCredentialsError">ERROR: Invalid credentials</string>
    <string name="invalidEmailError">ERROR: Invalid email</string>
    <string name="passwordsNotMatchError">ERROR: Passwords do not match</string>
    <string name="passwordMinLengthError">ERROR: Password length must be at least 8 characters long</string>
    <string name="locationMinLengthError">ERROR: Location length must be at least 5 characters long</string>
    <string name="alreadyExistsEmailError">ERROR: A user with the introduced email already exists</string>
    <string name="registerError">ERROR: Sign up failed</string>
    <string name="cannotGetUsersError">ERROR: Cannot get users</string>
    <string name="cannotGetUserError">ERROR: Cannot get user</string>
    <string name="cannotGetEventsError">ERROR: Cannot get events</string>
    <string name="cannotGetEventError">ERROR: Cannot get event</string>
    <string name="endDateBeforeStartDateEventError">ERROR: Start date must be before end date</string>
    <string name="minAssistantsEventError">ERROR: Minimum of 2 assistants for an event</string>

    <!-- Notifications -->
    <string name="friendRequestAccepted">Friend request accepted successfully</string>
    <string name="friendRequestDeclined">Friend request declined successfully</string>
    <string name="registerSuccessful">Signed up successfully</string>
    <string name="eventCreatedSuccessfully">Event created successfully</string>
    <string name="eventEditedSuccessfully">Event edited successfully</string>
    <string name="friendRequestSent">Friend request sent successfully</string>
    <string name="friendRequestAlreadySent">Friend request was already sent</string>
    <string name="isNowYourFriend">is now your friend!</string>
    <string name="accountUpdatedSuccessfully">Information updated successfully</string>
    <string name="eventDeletedSuccessfully">Event deleted successfully</string>
    <string name="joinedEventSuccessfully">You are now a participant of this event</string>
    <string name="leaveEventSuccessfully">You have canceled your assistance to this event</string>
    <string name="eventDeletedConfirmation">Are you sure that you want to delete your account?</string>

    <!-- Symbols -->
    <string name="dot">·</string>
    <string name="hyphen">-</string>

</resources>