<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:text="@string/editUserInfoTitle"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/emailTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/email_input"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/changeEmailHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="15sp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/firstNameTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_input_layout"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/changeFirstNameHint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="15sp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/lastNameTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_input_layout"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/changeLastNameHint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="15sp"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/passwordTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/changePasswordHint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="15sp"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/repeatPasswordTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_input_layout"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/repeat_password_input"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/repeatChangedPasswordHint"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="15sp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/image_selector_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/submit_info_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/clear_blue"
            android:text="@string/updateInfoLabel"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>