<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:fadingEdgeLength="30dp"
    android:requiresFadingEdge="vertical"
    tools:context=".controller.fragments.EventCreationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="25dp">

        <ImageView
            android:id="@+id/edit_event_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/backArrowDescription"
            android:src="@drawable/arrow_back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="@string/editEventInfoTitle"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/edit_event_image_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/eventTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_event_title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/change_event_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/changeTitleHint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eventLocationTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_event_location_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/change_event_location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/changeLocationHint"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eventStartDateTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_event_start_date_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/change_event_start_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/changeEventStartDateHint"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eventEndDateTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_event_end_date_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/change_event_end_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/changeEventEndDateHint"
                android:importantForAutofill="no"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eventNumberOfParticipantsTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_event_participants_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/change_event_number_participants_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/changeNumberOfParticipantsHint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eventTypeTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_event_type_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            app:hintEnabled="false"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/change_event_type_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/changeEventTypeHint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/eventDescriptionTitle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/change_event_description_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/change_event_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/primary_background"
                android:hint="@string/changeEventDescriptionHint"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/broken_white"
                android:textSize="17sp"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_event_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/clear_blue"
            android:text="@string/updateEventLabel"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>