<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.fragments.HomeFragment">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/searchEventsHint"
        android:textColorHint="@color/broken_white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:autofillHints=""
        android:inputType="text"
        android:background="@drawable/home_search_bar"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:text="@string/popularTitle"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/textSeeAll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seeAllLabel"
            android:gravity="end|center_vertical"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:textColor="@color/clear_blue"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/EventsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

</LinearLayout>